fixing cuda requirement

--- a/Pipfile
+++ b/Pipfile
@@ -7,11 +7,12 @@ name = "pypi"
 streamlit = "*"
 scikit-learn = "*"
 nltk = "*"
-torch = "*"
+torch = "==2.1.2"
+torchvision = "==0.16.2"
+torchaudio = "==2.1.2"
 pandas = "*"
 st-annotated-text = "*"
 transformers = "*"
-torchvision = "*"
 
 [dev-packages]
 
